# Dev-Books

./: README.md  manage.py  pyproject.toml
core/: urls.py
core/apps/users/: admin.py  forms.py  mixins.py  models.py  tokens.py  urls.py  views.py
core/apps/users/migrations/: 0001_initial.py
core/settings/: base.py  logging.py
static/accounts/css/: account.css
static/core/css/: base.css
templates/: base.html  footer.html
templates/accounts/: sub_base.html  up.html
templates/accounts/password_reset/: password_reset_confirm.html  password_reset_form.html  reset_status.html
templates/accounts/registration/: account_activation_email.html  activation_invalid.html  login.html  register_email_confirm.html  signup.html
templates/accounts/user/: account-settings.html  add_to_favorite.html  delete_confirm.html  delete_user.html  edit_details.html
