[project]
name = "penguin-reads-stable"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.5"
dependencies = [
    "asgiref==3.8.1",
    "django==5.1.10",
    "django-ckeditor==6.7.0",
    "django-js-asset==2.2.0",
    "django-widget-tweaks>=1.5.0",
    "pillow==10.3.0",
    "python-environ==0.4.54",
    "six==1.16.0",
    "sqlparse==0.5.0",
]
